# motherflame

./: .gitignore  CHANGELOG.md  CONCEPTS.md  CONTRIBUTING.md  README.md  STRATEGY.md  pyproject.toml
.hermes/plans/: 2026-06-28_140000-motherflame-v0.2-roadmap.md
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  ci.yml.example  how-it-works.html
motherflame/: __init__.py  agent.py  cli.py  conflicts.py  connectors.py  core.py  coreference.py  documents.py  embeddings.py  eval.py  graph.py  ledger.py  localsync.py  mcp_server.py  redact.py  research.py  retrieval.py  runtime.py  semantic_validator.py  sessions.py  splash.py  sync.py  tokens.py  trust.py
motherflame/retrievers/: __init__.py  semantic.py
tests/: test_agent_team_setup.py  test_authority.py  test_colleague_fixes.py  test_conflicts.py  test_core.py  test_doctor.py  test_documents.py  test_embeddings.py  test_fixes.py  test_graph_cef.py  test_integration.py  test_integration_cef.py  test_localsync.py  test_onboarding.py  test_openai_embedding.py  test_research.py  test_semantic_retrieval.py  test_sensitivity.py  test_splash.py  test_sync_blob_key.py  test_team.py  test_universal.py
