[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "motherflame"
version = "0.1.0"
description = "The Org Brain CLI — harvest context from your team's AI agents"
requires-python = ">=3.9"
# AES-256-GCM via the audited `cryptography` library — we intentionally do NOT
# hand-roll crypto. This is the only runtime dependency.
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
pdf = ["pypdf>=4"]
dev = ["pytest>=7"]

[project.scripts]
motherflame = "motherflame.cli:main"

[tool.setuptools.packages.find]
where = ["."]
